# diode

./: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  mypy.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/actions/setup/: action.yml
.github/workflows/: main.yml
bash_completion/: diode
diode/: __init__.py  core.py  main.py  test.py
