[metadata]
name = data-diode
version = attr: diode.__version__
author = Fionn Fitzmaurice
description = Send and receive data over serial diode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fionn/diode
keywords =
    diode
    data diode
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Security
    Typing :: Typed
project_urls =
    Source Code = https://github.com/fionn/diode
    Changelog = https://github.com/fionn/diode/tags
    Documentation = https://github.com/fionn/diode/blob/master/README.md
    Bug Tracker = https://github.com/fionn/diode/issues
    PyPI = https://pypi.org/project/diode/
    Download = https://github.com/fionn/diode/archive/refs/heads/master.zip

[options]
zip_safe = false
pymodules = diode
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    pyserial

[options.entry_points]
console_scripts =
    diode = diode:main

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    pylint
    mypy
    coverage
